--- a/helm/gray.values.yaml
+++ b/helm/gray.values.yaml
@@ -1,5 +1,5 @@
 #
-# 当前配置默认为生成环境配置
+# 当前配置默认为生成环境配置 gray环境
 #
 #运行环境 生产环境：production；预发环境：gray;测试环境：hhc-tech；开发环境：hhz-dev
 operatingEnvironment: gray
