--- a/helm/gray.values.yaml
+++ b/helm/gray.values.yaml
@@ -20,7 +20,7 @@ aliyunSlsProject: false
 #是否挂载模型目录
 volueMountMlModelOss: true
 #创建内网SLB
-intranetServiceEnable: true
+intranetServiceEnable: false
 #内网SLB ID
 intranetServiceAlicloudLoadbalancerId: lb-2zesdmyh88veofulwfxmk
 #自动伸缩容设置
